# petsc-lib

./: .gitignore  CMakeLists.txt  Makefile  README.md
config/: debug.config.sh  release.config.sh
